fix: 🐛 refactor all structure
