# controllers/movie.controller.go
@@ -3,7 +3,7 @@ package controllers
 import "github.com/gin-gonic/gin"
 
 func (m *Controller) MovieRoute(router *gin.Engine) {
-	router.GET("/movies", m.GetAllMovieHandler)
-	router.GET("/movies/:id", m.GetMovieByIdHandler)
-	router.POST("/create/movie", m.CreateMovieHandler)
+	router.GET("/movie/list", m.GetAllMovie)
+	router.GET("/movies/:id", m.GetMovieById)
+	router.POST("/create/movie", m.CreateMovie)
 }
